# grantflow

./: .gitignore  =2.33.0  ASSESSMENT.md  alembic.ini  plan.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_tsvector_fts.py  0003_pipeline_run_table.py  0004_add_api_keys.py  0005_add_canonical_id.py  (+4 more)
deploy/: deploy.sh  install-timers.sh
grantflow/: app.py  config.py  database.py  dedup.py  digest.py  models.py  normalizers.py
scripts/: backfill_ada_tags.py  backfill_normalization.py  seed_demo_key.py
static/: style.css
templates/: agency.html  base.html  billing_success.html  detail.html  fund_your_fix.html  fund_your_fix_widget.html  landing.html  playground.html  pricing.html  search.html  stats.html
tests/: conftest.py  test_ada_backfill.py  test_ada_compliance.py  test_agencies.py  test_agency_page.py  test_analytics.py  test_api_keys.py  test_auth_ratelimit.py  test_billing.py  test_cfda_link.py  test_daily_feed.py  test_dedup.py  test_email_digest.py  test_enrichment.py  test_export.py  test_fund_your_fix.py  test_fund_your_fix_api.py  test_grants_gov_rest.py  test_gtm_pages.py  test_health.py  test_monitor.py  test_normalizers.py  test_pipeline_cleanup.py  test_pipeline_imports.py  test_sam_gov.py  test_saved_search_model.py  test_saved_searches_api.py  test_schemas.py  test_state_monitor.py  test_state_scrapers.py  test_web_ui.py
(+137 files in other folders)
